--- a/games.html
+++ b/games.html
@@ -45,6 +45,7 @@
   
    <div>
   <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif>
+  <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif>
   </div> <br>
     
     
