--- a/games.html
+++ b/games.html
@@ -43,10 +43,14 @@
   <img src=media/img2.gif><img src=67Pg.gif><img src=media/img2.gif>
   </div> <br> -->
   
-   <div>
-  <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif>
-  <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif>
+  div>
+  <img src=media/img1.gif><img src=media/img1.gif>
   </div> <br>
+  
+<!--    <div>
+  <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif>
+  <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif>
+  </div> <br> -->
     
     
   <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play Survival Game<strong></h2>
