--- a/games.html
+++ b/games.html
@@ -43,7 +43,7 @@
   <img src=media/img2.gif><img src=67Pg.gif><img src=media/img2.gif>
   </div> <br> -->
   
-  div>
+  <div>
   <img src=media/img1.gif><img src=media/img1.gif>
   </div> <br>
   
