--- a/games.html
+++ b/games.html
@@ -44,7 +44,7 @@
   </div> <br> -->
   
   <div>
-  <img src=media/img1.gif><img src=media/img1.gif>
+  <img src=media/img2.gif><img src=media/img2.gif>
   </div> <br>
   
 <!--    <div>
@@ -53,9 +53,11 @@
   </div> <br> -->
     
     
-  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play Survival Game<strong></h2>
-      <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
-      as well and runs on dark mode, giving it a very sleek and matte finish.</span></p> <br>
+  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Survival Game<strong></h2>
+      <p id="text12"><span>With detailed graphics and easy to use controls, this is a simple avoid coming in contact with the lava
+        game and once you collect all the coins of that level, you're automatically ascended to the next level. You're given three lives
+        for each level which get eventually harder and harder and your goal is to not fall in the lava while collecting all the coins that 
+        come across your way. After you've used up all your lives, you lose and are asked to exit or replay.</span></p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play now
