--- a/games.html
+++ b/games.html
@@ -35,7 +35,7 @@
 <div style="justify-content:center; display: flex; align-items: center;"> 
   <p id="text10"><strong>Play these games</strong></p> </div>
   <div style="justify-content:center; display: flex; align-items: center;"> 
-  <p id="text07"><span>Hello! I am Anoushka. I'm a 15 years old full stack web developer and I've put together
+  <p id="text07"><span>Hello! I am Anoushka. I'm a 15 year old full stack web developer and I've put together
     a collection of the few games I have created along this wonderful journey of coding in the past few years. Looking Forward to your 
     feedbacks which can be <a href=mailto:nushblogs@gmail.com>emailed</a> to me. Constructive criticism is appreciated !</span> <br> </div> <br>
    
@@ -65,9 +65,14 @@
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play now
     </button></div> <br>
-     <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>CSS Buttons<strong></h2>
-      <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
-      as well and runs on dark mode, giving it a very sleek and matte finish.</span></p> <br>
+     <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the *simpler* Survival Game<strong></h2>
+      <p id="text12"><span>With block shaped cute and minimal graphics and easy to use controls, this is a simple avoid coming in contact with the lava
+        game and once you collect all the coins of that level, you're automatically ascended to the next level. You're given three lives
+        for each level which get eventually harder and harder and your goal is to not fall in the lava while collecting all the coins that 
+        come across your way. After you've used up all your lives, you lose and are asked to exit or replay.</span> <br>
+        This game is a great way to improve your problem solving and goal orientation skills since you're made to focus on the task
+        and only by playing with full concentration will you be able to solve the problem (i.e. avoid the lava) and achieve your goal (i.e collecting
+        all the coins) and finally make it to the end. Happy Playing !</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
