--- a/games.html
+++ b/games.html
@@ -65,7 +65,7 @@
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play now
     </button></div> <br>
-     <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the *simpler* Survival Game<strong></h2>
+     <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Survival Game (Block)<strong></h2>
       <p id="text12"><span>With block shaped cute and minimal graphics and easy to use controls, this is a simple avoid coming in contact with the lava
         game and once you collect all the coins of that level, you're automatically ascended to the next level. You're given three lives
         for each level which get eventually harder and harder and your goal is to not fall in the lava while collecting all the coins that 
@@ -75,14 +75,17 @@
         all the coins) and finally make it to the end. Happy Playing !</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play
     </button></div> <br>
-      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>CSS Buttons<strong></h2>
+      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Tic Tac Toe<strong></h2>
       <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
       as well and runs on dark mode, giving it a very sleek and matte finish.</span></p>  <br>
    <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Twitter
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">HTML CSS JS
+  </button>
+    <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Python
   </button>
   </div>
   
