--- a/games.html
+++ b/games.html
@@ -75,11 +75,14 @@
         all the coins) and finally make it to the end. Happy Playing !</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Now
     </button></div> <br>
-      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Tic Tac Toe<strong></h2>
-      <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
-      as well and runs on dark mode, giving it a very sleek and matte finish.</span></p>  <br>
+      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Tic Tac Toe (Multiplayer)<strong></h2>
+      <p id="text12"><span>Tic-tac-toe, is a  game for two players, X and O, who take turns marking the spaces in a 3×3 grid. 
+        The player who succeeds in placing three of their marks in a diagonal, horizontal, or vertical row is the winner.
+        This user friendly virtual UI allows you to play this world famous classic game with the help of a beautiful color
+        pallete and without the need to bring out paper and pencil. You can play this on the visually appealing interace 
+        made with html css and js or play the python version of a less appaling one with your friends!</span></p>  <br>
    <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Visuals
