--- a/games.html
+++ b/games.html
@@ -90,8 +90,18 @@
     <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">IDLE
   </button>
-  </div>
-  
+  </div> <br>
+  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Snake Game (Block)<strong></h2>
+      <p id="text12"><span>Snake is the common name for a video game concept where the player maneuvers a line which grows 
+        in length, with the line itself being a primary obstacle.</p> <br>
+  <div style="justify-content:center; display: flex; align-items: center;">  <br>
+  <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Htmlcssjs
+    </button>
+    <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">PyGame
+  </button>
+    </div> <br>
 </section>
   
 <!--   <span>Hello! I am Anoushka. I'm 15 years old and I'm in 11th grade studying STEM subjects. I'm a Kathak Dancer and have been dancing since 
