--- a/games.html
+++ b/games.html
@@ -93,10 +93,14 @@
   </div> <br>
   <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Snake Game (Block)<strong></h2>
       <p id="text12"><span>Snake is the common name for a video game concept where the player maneuvers a line which grows 
-        in length, with the line itself being a primary obstacle.</p> <br>
+        in length, with the line itself being a primary obstacle.You can play this on the visually appealing interace 
+        made with html css and js on codepen or play the python version of it (you must have pygame installed). It's a fun 
+        distraction and is a game that gets you extremely hooked to it, which is one of the main reasons why I enjoy this so much. <br>
+        It is suitable for all ages and this user friendly virtual UI allows you to play this world famous classic game with the help of 
+         beautiful color palletes used in this project. </p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Htmlcssjs
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">HtmlCssJs
     </button>
     <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">PyGame
