--- a/games.html
+++ b/games.html
@@ -106,7 +106,7 @@
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Codepen
     </button>
     <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">PyGame
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Python
   </button>
     </div> <br>
 </section>
