--- a/games.html
+++ b/games.html
@@ -110,14 +110,31 @@
   </button>
     </div> <br>
       <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play 2048<strong></h2>
-      <p id="text12"><span>2048 is a single-player sliding block puzzle game. The game's objective is to slide numbered tiles on a grid to combine them to 
-        create a tile with the number 2048. However, one can continue to play the game after reaching the goal, creating tiles with larger numbers.</span> <br>
+      <p id="text12"><span>This is one of my personal favourites and an extremely fun game suitable for all ages.
+        2048 is a single-player sliding block puzzle game. The game's objective is to slide numbered tiles on a grid to combine them to 
+        create a tile with the number 2048. However, one can continue to play the game after reaching the goal, creating tiles with larger numbers.</span> <br><br>
         This game is a great way to improve your concentration, mental ability and problem solving skills which is why I enjoy playing it
         in my free time so much. Happy Playing !</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play now
     </button></div> <br>
+        
+        <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play Hangman<strong></h2>
+      <p id="text12"><span>This is one of my personal favourites and an extremely fun game suitable for all ages.
+        2048 is a single-player sliding block puzzle game. The game's objective is to slide numbered tiles on a grid to combine them to 
+        create a tile with the number 2048. However, one can continue to play the game after reaching the goal, creating tiles with larger numbers.</span> <br><br>
+        This game is a great way to improve your concentration, mental ability and problem solving skills which is why I enjoy playing it
+        in my free time so much. Happy Playing !</p> <br>
+  <div style="justify-content:center; display: flex; align-items: center;">  <br>
+  <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Visuals
+    </button>
+  <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">IDLE
+    </button>      
+          
+          </div> <br>
 </section>
   
 <!--   <span>Hello! I am Anoushka. I'm 15 years old and I'm in 11th grade studying STEM subjects. I'm a Kathak Dancer and have been dancing since 
