--- a/games.html
+++ b/games.html
@@ -79,8 +79,9 @@
     </button></div> <br> -->
   
   <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Survival Game<strong></h2>
-      <p id="text12"><span>With detailed graphics and easy to use controls, this is a simple avoid coming in contact with the lava
-        game and once you collect all the coins of that level, you're automatically ascended to the next level. You're given three lives
+      <p id="text12"><span>With detailed graphics (simple graphics available on block version) and easy to use 
+        controls, this is a simple avoid coming in contact with the lava game and once you collect all the coins 
+        of that level, you're automatically ascended to the next level. You're given three lives
         for each level which get eventually harder and harder and your goal is to not fall in the lava while collecting all the coins that 
         come across your way. After you've used up all your lives, you lose and are asked to exit or replay.</span> <br>
         This game is a great way to improve your problem solving and goal orientation skills since you're made to focus on the task
@@ -88,10 +89,10 @@
         all the coins) and finally make it to the end. Happy Playing !</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play now
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Regular Version
     </button>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 20%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Block
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Block Version
     </button>
     </div> <br>
       <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Tic Tac Toe (Multiplayer)<strong></h2>
