--- a/games.html
+++ b/games.html
@@ -78,12 +78,12 @@
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Now
     </button></div> <br> -->
   
-  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Survival Game<strong></h2>
+  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Survival Game<strong></h2><br>
       <p id="text12"><span>With detailed graphics (simple graphics available on block version) and easy to use 
         controls, this is a simple avoid coming in contact with the lava game and once you collect all the coins 
         of that level, you're automatically ascended to the next level. You're given three lives
         for each level which get eventually harder and harder and your goal is to not fall in the lava while collecting all the coins that 
-        come across your way. After you've used up all your lives, you lose and are asked to exit or replay.</span> <br>
+        come across your way. After you've used up all your lives, you lose and are asked to exit or replay.</span> <br><br>
         This game is a great way to improve your problem solving and goal orientation skills since you're made to focus on the task
         and only by playing with full concentration will you be able to solve the problem (i.e. avoid the lava) and achieve your goal (i.e collecting
         all the coins) and finally make it to the end. Happy Playing !</p> <br>
