--- a/games.html
+++ b/games.html
@@ -78,8 +78,8 @@
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Now
     </button></div> <br> -->
   
-  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Survival Game<strong></h2><br>
-      <p id="text12"><span>With detailed graphics (simple graphics available on block version) and easy to use 
+  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play the Survival Game<strong></h2>
+      <p id="text12"><br><span>With detailed graphics (simple graphics available on block version) and easy to use 
         controls, this is a simple avoid coming in contact with the lava game and once you collect all the coins 
         of that level, you're automatically ascended to the next level. You're given three lives
         for each level which get eventually harder and harder and your goal is to not fall in the lava while collecting all the coins that 
@@ -96,7 +96,7 @@
     </button>
     </div> <br>
       <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Tic Tac Toe (Multiplayer)<strong></h2>
-      <p id="text12"><span>Tic-tac-toe, is a  game for two players, X and O, who take turns marking the spaces in a 3×3 grid. 
+      <p id="text12"><br><span>Tic-tac-toe, is a  game for two players, X and O, who take turns marking the spaces in a 3×3 grid. 
         The player who succeeds in placing three of their marks in a diagonal, horizontal, or vertical row is the winner.
         This user friendly virtual UI allows you to play this world famous classic game with the help of a beautiful color
         pallete and without the need to bring out paper and pencil. You can play this on the visually appealing interace 
