--- a/games.html
+++ b/games.html
@@ -158,7 +158,31 @@
       <p id="text12"><br><span>Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
         table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
         the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
-        its paddle as further away from the opposing player as possible.</span> <br>
+        its paddle as further away from the opposing player as possible.</span> <br><br>
+        Putting together the knowloedge of Artificial Intelligence, CS and Physics with some degree of required mathematical calculations required to formulate
+        this kind of AI player, our virtual sportsperson is quite a good opponent for people without a huge amount of game skill. Happy Playing!</p> <br>
+  <div style="justify-content:center; display: flex; align-items: center;">  <br>
+  <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Now
+    </button>  
+          </div> <br>
+      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Rock Paper Scissor (Single Player)<strong></h2>
+      <p id="text12"><br><span>Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
+        table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
+        the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
+        its paddle as further away from the opposing player as possible.</span> <br><br>
+        Putting together the knowloedge of Artificial Intelligence, CS and Physics with some degree of required mathematical calculations required to formulate
+        this kind of AI player, our virtual sportsperson is quite a good opponent for people without a huge amount of game skill. Happy Playing!</p> <br>
+  <div style="justify-content:center; display: flex; align-items: center;">  <br>
+  <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Now
+    </button>  
+          </div> <br>
+      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play Pong (Single Player)<strong></h2>
+      <p id="text12"><br><span>Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
+        table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
+        the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
+        its paddle as further away from the opposing player as possible.</span> <br><br>
         Putting together the knowloedge of Artificial Intelligence, CS and Physics with some degree of required mathematical calculations required to formulate
         this kind of AI player, our virtual sportsperson is quite a good opponent for people without a huge amount of game skill. Happy Playing!</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
