--- a/games.html
+++ b/games.html
@@ -154,7 +154,7 @@
           
           </div> <br>
           
-      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play Pong (Single Player)<strong></h2>
+      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>AI Pong (Single Player)<strong></h2>
       <p id="text12"><br><span>Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
         table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
         the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
@@ -167,12 +167,13 @@
     </button>  
           </div> <br>
       <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Rock Paper Scissor (Single Player)<strong></h2>
-      <p id="text12"><br><span>Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
-        table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
-        the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
-        its paddle as further away from the opposing player as possible.</span> <br><br>
-        Putting together the knowloedge of Artificial Intelligence, CS and Physics with some degree of required mathematical calculations required to formulate
-        this kind of AI player, our virtual sportsperson is quite a good opponent for people without a huge amount of game skill. Happy Playing!</p> <br>
+      <p id="text12"><br><span>Rock paper scissors is a hand game usually played between two people, in which each player simultaneously 
+        forms one of three shapes with an outstretched hand. These shapes are "rock", "paper", and "scissors" With easy to navigate 
+        features controls along with a user friendly interface, my game allows you to play this classic game completely virtually 
+        against the Computer AI. The AI tries to predict your next move with the data it is fed with when you play the game, hence each round makes
+        it harder for you to defeat the AI.</span> <br><br>
+        This game is appropriate for and can be played by people of all ages and isgreat way to improve your problem solving skills.
+        With easy to use UI and user friendly navigation tools, this is one of my favourite games ever. Happy Playing !<</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Now
