--- a/games.html
+++ b/games.html
@@ -173,7 +173,7 @@
         against the Computer AI. The AI tries to predict your next move with the data it is fed with when you play the game, hence each round makes
         it harder for you to defeat the AI.</span> <br><br>
         This game is appropriate for and can be played by people of all ages and isgreat way to improve your problem solving skills.
-        With easy to use UI and user friendly navigation tools, this is one of my favourite games ever. Happy Playing !<</p> <br>
+        With easy to use UI and user friendly navigation tools, this is one of my favourite games ever. Happy Playing !</p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play Now
