--- a/index.html
+++ b/index.html
@@ -184,14 +184,20 @@
 
 <section id="four-section" class="inactive" style="display: none;">
   <br>
-    <h2 id="text27"><strong>Play my simple games</strong></h2>
-   <p id="text28"><strong>Block Game</strong>
-  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
-  With over 50 unique products on my store, there's a wide variety to choose from. 
-  You can customise the color combinations of any existing design or send me an email if you want a custom 
-  design made just for you! <br> <br>
+    <h2 id="text27"><strong>Play games I made !</strong></h2>
+  
+   <p id="text28"><strong>Play the Survival Game</strong>
+  </p><p id="text29"><span>With detailed graphics (simple graphics available on block version) and easy to use 
+        controls, this is a simple avoid coming in contact with the lava game and once you collect all the coins 
+        of that level, you're automatically ascended to the next level. You're given three lives
+        for each level which get eventually harder and harder and your goal is to not fall in the lava while collecting all the coins that 
+        come across your way. After you've used up all your lives, you lose and are asked to exit or replay.</span> <br><br>
+        This game is a great way to improve your problem solving and goal orientation skills since you're made to focus on the task
+        and only by playing with full concentration will you be able to solve the problem (i.e. avoid the lava) and achieve your goal (i.e collecting
+        all the coins) and finally make it to the end. Happy Playing !<br> <br>
   </p>
-  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Regular Version</a></li>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Block Version</a></li>
   </ul>
    <p id="text28"><strong>Survival Game</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
