--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <br>
     <h2 id="text27"><strong>Play games I made !</strong></h2>
   
-   <p id="text28"><strong>Play the Survival Game</strong>
+   <p id="text28"><strong>The Survival Game</strong>
   </p><p id="text29"><span>With detailed graphics (simple graphics available on block version) and easy to use 
         controls, this is a simple avoid coming in contact with the lava game and once you collect all the coins 
         of that level, you're automatically ascended to the next level. You're given three lives
@@ -199,37 +199,47 @@
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Regular Version</a></li>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Block Version</a></li>
   </ul>
-   <p id="text28"><strong>Survival Game</strong>
-  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
-  With over 50 unique products on my store, there's a wide variety to choose from. 
-  You can customise the color combinations of any existing design or send me an email if you want a custom 
-  design made just for you! <br> <br>
+   <p id="text28"><strong>Tic Tac Toe (Multiplayer)</strong>
+  </p><p id="text29"><span>Tic-tac-toe, is a  game for two players, X and O, who take turns marking the spaces in a 3×3 grid. 
+        The player who succeeds in placing three of their marks in a diagonal, horizontal, or vertical row is the winner.
+        This user friendly virtual UI allows you to play this world famous classic game with the help of a beautiful color
+        pallete and without the need to bring out paper and pencil. You can play this on the visually appealing interace 
+        made with html css and js or play the python version of a less appaling one with your friends!</span> <br><br> If you lose or
+        if there's a draw, it allows you to replay the game or exit it and you can continue playing this for hours and hours as it
+        improves your critical thinking ability along with concentration and problem solving skills.<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play Visual Version</a></li>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play IDLE Version</a></li>
+  </ul>
+      <p id="text28"><strong>Snake Game</strong>
+  </p><p id="text29"><span>Snake is the common name for a video game concept where the player maneuvers a line which grows 
+        in length, with the line itself being a primary obstacle.You can play this on the visually appealing interace 
+        made with html css and js on codepen or play the python version of it (you must have pygame installed). <br><br> It's a fun 
+        distraction and is a game that gets you extremely hooked to it, which is one of the main reasons why I enjoy this so much. 
+        It is suitable for all ages and this user friendly virtual UI allows you to play this world famous classic game with the help of 
+         beautiful color palletes used in this project. It also helps improve your concentration by being forced to focus on the object to
+        make sure the snake isn't losing.<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play on Codepen</a></li> 
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play on PyGame</a></li> 
+  </ul>
+   <p id="text28"><strong>2048</strong>
+  </p><p id="text29"><span> This is one of my personal favourites and an extremely fun game suitable for all ages.
+        2048 is a single-player sliding block puzzle game. The game's objective is to slide numbered tiles on a grid to combine them to 
+        create a tile with the number 2048. However, one can continue to play the game after reaching the goal, creating tiles with larger numbers.</span> <br><br>
+        This game is a great way to improve your concentration, mental ability and problem solving skills which is why I enjoy playing it
+        in my free time so much. Happy Playing ! <br> <br>
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   </ul>
-      <p id="text28"><strong>My Own Minecraft</strong>
+   <p id="text28"><strong>Hangman</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
   With over 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
   design made just for you! <br> <br>
   </p>
-  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li> 
-  </ul>
-   <p id="text28"><strong>Hangman Game</strong>
-  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
-  With over 50 unique products on my store, there's a wide variety to choose from. 
-  You can customise the color combinations of any existing design or send me an email if you want a custom 
-  design made just for you! <br> <br>
-  </p>
-  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
-  </ul>
-   <p id="text28"><strong>Tic Tac Toe Game</strong>
-  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
-  With over 50 unique products on my store, there's a wide variety to choose from. 
-  You can customise the color combinations of any existing design or send me an email if you want a custom 
-  design made just for you! <br> <br>
-  </p>
-  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play visuals</a></li>
+    <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play on IDLE</a></li>
   </ul>
    <p id="text28"><strong>Snake Game</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
