--- a/index.html
+++ b/index.html
@@ -241,30 +241,38 @@
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play visuals</a></li>
     <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play on IDLE</a></li>
   </ul>
-   <p id="text28"><strong>Snake Game</strong>
-  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
-  With over 50 unique products on my store, there's a wide variety to choose from. 
-  You can customise the color combinations of any existing design or send me an email if you want a custom 
-  design made just for you! <br> <br>
+   <p id="text28"><strong>AI Pong (Single Player)</strong>
+  </p><p id="text29"><span> Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
+        table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
+        the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
+        its paddle as further away from the opposing player as possible.</span> <br><br>
+        Putting together the knowloedge of Artificial Intelligence, CS and Physics with some degree of required mathematical calculations required to formulate
+        this kind of AI player, our virtual sportsperson is quite a good opponent for people without a huge amount of game skill. Happy Playing!<br> <br>
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
-    <p id="text28"><strong>Sodoku Solver</strong>
-  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
-  With over 50 unique products on my store, there's a wide variety to choose from. 
-  You can customise the color combinations of any existing design or send me an email if you want a custom 
-  design made just for you! <br> <br>
-  </p>
-  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
-  </ul>
-    <p id="text28"><strong>Rock Paper Scissors</strong>
-  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
-  With over 50 unique products on my store, there's a wide variety to choose from. 
-  You can customise the color combinations of any existing design or send me an email if you want a custom 
-  design made just for you! <br> <br>
+    <p id="text28"><strong>Rock Paper Scissor (Single Player)</strong>
+  </p><p id="text29"><span> >Rock paper scissors is a hand game usually played between two people, in which each player simultaneously 
+        forms one of three shapes with an outstretched hand. These shapes are "rock", "paper", and "scissors" With easy to navigate 
+        features controls along with a user friendly interface, my game allows you to play this classic game completely virtually 
+        against the Computer AI. The AI tries to predict your next move with the data it is fed with when you play the game, hence each round makes
+        it harder for you to defeat the AI.</span> <br><br>
+        This game is appropriate for and can be played by people of all ages and isgreat way to improve your problem solving skills.
+        With easy to use UI and user friendly navigation tools, this is one of my favourite games ever. Happy Playing !<br> <br>
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   </ul>
-       <p id="text28"><strong>Pong</strong>
+    <p id="text28"><strong>Sodoku Player</strong>
+  </p><p id="text29"><span>Pong is a table tennis–themed arcade sports video game, featuring simple two-dimensional graphics.Basically, it is a virtual version of 
+        table tennis. With easy to navigate features controls along with a user friendly interface, my game allows you to play against the Computer AI. The AI predicts 
+        the position of the ball the next time it approaches the player and aims to position itself such that the ball will bounce off 
+        its paddle as further away from the opposing player as possible.</span> <br><br>
+        Putting together the knowloedge of Artificial Intelligence, CS and Physics with some degree of required mathematical calculations required to formulate
+        this kind of AI player, our virtual sportsperson is quite a good opponent for people without a huge amount of game skill. Happy Playing!<br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Solve by backtracking</a></li>
+  </ul>
+       <p id="text28"><strong>Match the Image</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
   With over 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
