--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Solve by backtracking</a></li>
   </ul>
-       <p id="text28"><strong>Match the Image</strong>
+       <p id="text28"><strong>Halloween Game (Single player)</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
   With over 50 unique products on my store, there's a wide variety to choose from. 
   You can customise the color combinations of any existing design or send me an email if you want a custom 
@@ -280,6 +280,25 @@
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   </ul>
+ 
+         <p id="text28"><strong>Match the Image</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+   
+          <p id="text28"><strong>Five in row</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+    
 </section>
 
 <section id="five-section" class="inactive" style="display: none;">
